force-app/main/default/objects/PhoneNumber__c/fields/Disconnected__c.field-meta.xml
<CustomField>
    <fullName>Disconnected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disconnected</label>
    <type>Checkbox</type>
</CustomField>