force-app/main/default/objects/PhoneNumber__c/fields/dummy__c.field-meta.xml
<CustomField>
    <fullName>dummy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>dummy</label>
    <type>Checkbox</type>
</CustomField>