force-app/main/default/objects/PhoneNumber__c/fields/Incidence__c.field-meta.xml
<CustomField>
    <fullName>Incidence__c</fullName>
    <label>Incidence</label>
    <summaryForeignKey>PhonePersonRelationship__c.Phonenumber__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>