force-app/main/default/objects/PhoneNumber__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Incidence__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_ACTIVITY</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Total_Calls__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Incidence__c</field>
        <operation>greaterThan</operation>
        <value>1</value>
    </filters>
    <label>All</label>
</ListView>