force-app/main/default/objects/PhoneNumber__c/listViews/Disconnected_Numbers.listView-meta.xml
<ListView>
    <fullName>Disconnected_Numbers</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Disconnected Numbers</label>
</ListView>