force-app/main/default/objects/PhoneNumber__c/listViews/Verified_Numbers.listView-meta.xml
<ListView>
    <fullName>Verified_Numbers</fullName>
    <columns>NAME</columns>
    <columns>Incidence__c</columns>
    <filterScope>Everything</filterScope>
    <label>Verified Numbers</label>
</ListView>