force-app/main/default/objects/PhoneNumber__c/listViews/Wrong_Numbers.listView-meta.xml
<ListView>
    <fullName>Wrong_Numbers</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Wrong Numbers</label>
</ListView>